; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/hppa/gnu/extr_hppa-dis.c_extract_16.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/hppa/gnu/extr_hppa-dis.c_extract_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @extract_16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extract_16(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @GET_BIT(i32 %6, i32 16)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @GET_BIT(i32 %8, i32 17)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @GET_BIT(i32 %10, i32 31)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %2, align 4
  %13 = lshr i32 %12, 1
  %14 = and i32 %13, 8191
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* %3, align 4
  %17 = shl i32 %16, 15
  %18 = or i32 %15, %17
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = xor i32 %19, %20
  %22 = shl i32 %21, 14
  %23 = or i32 %18, %22
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* %5, align 4
  %26 = xor i32 %24, %25
  %27 = shl i32 %26, 13
  %28 = or i32 %23, %27
  store i32 %28, i32* %2, align 4
  %29 = load i32, i32* %2, align 4
  %30 = call i32 @sign_extend(i32 %29, i32 16)
  ret i32 %30
}

declare dso_local i32 @GET_BIT(i32, i32) #1

declare dso_local i32 @sign_extend(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
